# rust-playground

./: .gitignore  README.md
src/01_hello/guessing_game/src/: main.rs
src/01_hello/hello_cargo/src/: main.rs
src/02_general/: 01_variable.rs  02_data_type.rs  03_func.rs  04_statement.rs  05_ownership.rs  06_borrow.rs  07_slice.rs  08_struct.rs  08_struct_example.rs  09_enum.rs  10_match.rs  11_vector.rs  12_string.rs  13_hashmap.rs  14_panic.rs  15_result.rs  16_generic.rs  17_trait.rs  18_lifetime.rs  19_lifetime2.rs  21_closure.rs  22_iterator.rs  23_box.rs  24_deref.rs  25_drop.rs  26_rc.rs  27_refcell.rs  28_circular_ref.rs  29_thread.rs  30_mutex.rs  31_multi_vector.rs  32_oop.rs  33_pattern_match.rs
src/02_general/communicator/src/: lib.rs  main.rs
src/02_general/test20/: Cargo.toml
src/02_general/test20/src/: lib.rs
src/02_general/test20/tests/: common.rs  integration_test.rs
src/03_project/actix-hello/: Cargo.toml
src/03_project/actix-hello/src/: main.rs
src/03_project/actix-structure/: .env  Cargo.toml  Dockerfile
src/03_project/actix-structure/src/: config.rs  main.rs
src/03_project/actix-structure/src/app/: error_handler.rs  mod.rs  response.rs
src/03_project/actix-structure/src/app/router/: mod.rs  template.rs
src/03_project/actix-structure/src/app/router/v1/: mod.rs  sample.rs
src/03_project/actix-structure/src/model/repository/: champion.rs  mod.rs
src/03_project/actix-structure/src/tests/: sample.rs
src/03_project/greprs/: Cargo.toml
src/03_project/greprs/src/: lib.rs  main.rs
src/03_project/webserver/: 404.html  index.html
(+2 files in other folders)
