[package]
name = "imactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
env_logger = "0.10.0"
dotenv = "0.15.0"
log = "0.4.17"