[package]
name = "greprs"
version = "0.1.0"
edition = "2021"
authors = ["IML <shin10256@gmail.com>"]
description = "grep for Rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
